# selinur-rs

./: .dockerignore  Cargo.toml  Dockerfile
.github/: dependabot.yml
src/: errors.rs  kernel.rs  lib.rs  sys.rs
src/utest/: mod.rs  travis.rs
tests/: misc.rs  sys-sebools.rs
