[package]
name = "selinur"
version = "0.0.1-dev"
authors = [ "Luca Bruno <lucab@debian.org>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/selinur-rs"
documentation = "https://docs.rs/selinur"
description = "A pure-Rust library to interact with the SELinux kernel subsystem"
keywords = ["Linux", "SELinux", "security", "MAC"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
errno = "0.2"
error-chain = {version = "0.12", default-features = false}
libc = "0.2"
nix = "0.11"
openat = "0.1.16"

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: selinur release {{version}}"
pro-release-commit-message = "cargo: version bump to {{version}}"
tag-message = "selinur {{version}}"
